Changed file type to .html, as pages were being shown as text files when ran

--- a/Login Page.html
+++ b/Login Page.html
@@ -3,7 +3,10 @@
     <head>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	    <title>Main Menu - Crossword Puzzles & Solver</title>
-        <link rel = "stylesheet" href = "CSS_stylesheet">
+	    <title>Login - Crossword Puzzles & Solver</title>
+        <link rel = "stylesheet" href = "CSS_stylesheet.css">
     </head>
+    <body>
+        <h1>Hello</h1>
+    </body>
 </html>
