--- a/Main Menu Page.html
+++ b/Main Menu Page.html
@@ -3,7 +3,7 @@
     <head>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	    <title>Login - Crossword Puzzles & Solver</title>
-        <link rel = "stylesheet" href = "CSS_stylesheet">
+	    <title>Main Menu - Crossword Puzzles & Solver</title>
+        <link rel = "stylesheet" href = "CSS_stylesheet.css">
     </head>
 </html>
