--- a/Create Account Page.html
+++ b/Create Account Page.html
@@ -3,7 +3,7 @@
     <head>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	    <title>Create Account - Crossword Puzzles & Solver</title>
+	    <title>Create Account - Crossword Generator & Solver</title>
         <link rel = "stylesheet" href = "CSS_stylesheet.css">
     </head>
 </html>
