--- a/Login Page.html
+++ b/Login Page.html
@@ -3,10 +3,18 @@
     <head>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	    <title>Login - Crossword Puzzles & Solver</title>
+	    <title>Login - Crossword Generator & Solver</title>
         <link rel = "stylesheet" href = "CSS_stylesheet.css">
     </head>
     <body>
-        <h1>Hello</h1>
+       <div class = "wrapper">
+            <a class = "top"></a>
+            <header class = "login_header">
+                <div class = "accessibility_menu_button_div">
+                    <!-- Add the function to the accesibility menu button when the page has been created -->
+                    <button type = "button" class = "accessibility_menu_button overlay"></button>
+                </div>
+            </header>
+       </div>
     </body>
 </html>
