--- a/Create Account Page.html
+++ b/Create Account Page.html
@@ -6,4 +6,53 @@
 	    <title>Create Account - Crossword Generator & Solver</title>
         <link rel = "stylesheet" href = "CSS_stylesheet.css">
     </head>
+    <body>
+       <div class = "wrapper">
+            <a class = "top"></a>
+            <header class = "login_header">
+                <div class = "accessibility_menu_button_div">
+                    <!-- Add the function to the accesibility menu button when the page has been created -->
+                    <button type = "button" class = "accessibility_menu_button elements_overlay"></button>
+                </div>
+            </header>
+            <main>
+                <div class = "page_title_container">
+                    <h1 class = "text page_title">Create Account</h1>
+                    <h3 class = "text page_subtitle">Crossword Clue Solver & Generator</h3>
+                </div>
+                <div class = "enter_info_container">
+                    <div class = "enter_div">
+                        <div class = "info_enter_area">
+                            <p class = "text" style = "font-weight: bold;">Username:</p>
+                            <input type = "text" class = "text input_field" id = "username_input" placeholder = "Minimum 8 Characters" required = "required">
+                        </div>
+                        <!-- Text will be added when the user inputs invalid info -->
+                        <p id = "error_username" class = "text"></p>
+                    </div>
+                    <div class = "enter_div">
+                        <div class = "info_enter_area">
+                            <p class = "text" style = "font-weight: bold;">Password:</p>
+                            <input type = "text" class = "text input_field" id = "password_input" placeholder = "Minimum 8 Characters" required = "required">
+                        </div>
+                        <!-- Text will be added when the user inputs invalid info -->
+                        <p id = "error_password" class = "text"></p>
+                    </div>
+                    <div class = "enter_div">
+                        <div class = "info_enter_area">
+                            <p class = "text" style = "font-weight: bold;">Repeat Password:</p>
+                            <input type = "text" class = "text input_field" id = "repeat_password_input" placeholder = "Minimum 8 Characters" required = "required">
+                        </div>
+                        <!-- Text will be added when the user inputs invalid info -->
+                        <p id = "error_password_repeat" class = "text"></p>
+                    </div>
+                </div>
+                <div class = "submit_button_div">
+                    <button type = "button" class = "create_account_button text elements_overlay">CREATE</button>
+                </div>
+                <div class = "login_link_div">
+                    <a class = "text" href = "Login Page.html">Already have an account? Login here</a>
+                </div>
+            </main>
+       </div>
+    </body>
 </html>
