--- a/Login Page.html
+++ b/Login Page.html
@@ -12,9 +12,39 @@
             <header class = "login_header">
                 <div class = "accessibility_menu_button_div">
                     <!-- Add the function to the accesibility menu button when the page has been created -->
-                    <button type = "button" class = "accessibility_menu_button overlay"></button>
+                    <button type = "button" class = "accessibility_menu_button elements_overlay"></button>
                 </div>
             </header>
+            <main>
+                <div class = "page_title_container">
+                    <h1 class = "text page_title">Login</h1>
+                    <h3 class = "text page_subtitle">Crossword Clue Solver & Generator</h3>
+                </div>
+                <div class = "enter_info_container">
+                    <div class = "enter_div">
+                        <div class = "info_enter_area">
+                            <p class = "text" style = "font-weight: bold;">Username:</p>
+                            <input type = "text" class = "text input_field" id = "username_input" placeholder = "Minimum 8 Characters" required = "required">
+                        </div>
+                        <!-- Text will be added when the user inputs invalid info -->
+                        <p id = "error_username" class = "text"></p>
+                    </div>
+                    <div class = "enter_div">
+                        <div class = "info_enter_area">
+                            <p class = "text" style = "font-weight: bold;">Password:</p>
+                            <input type = "text" class = "text input_field" id = "password_input" placeholder = "Minimum 8 Characters" required = "required">
+                        </div>
+                        <!-- Text will be added when the user inputs invalid info -->
+                        <p id = "error_password" class = "text"></p>
+                    </div>
+                </div>
+                <div class = "submit_button_div">
+                    <button type = "button" class = "submit_button text elements_overlay">SUBMIT</button>
+                </div>
+                <div class = "login_link_div">
+                    <a class = "text" href = "Create Account Page.html">Don't have an account? Create one here</a>
+                </div>
+            </main>
        </div>
     </body>
 </html>
