--- a/Main Menu Page.html
+++ b/Main Menu Page.html
@@ -6,4 +6,15 @@
 	    <title>Main Menu - Crossword Generator & Solver</title>
         <link rel = "stylesheet" href = "CSS_stylesheet.css">
     </head>
+    <body>
+       <div class = "wrapper">
+            <a class = "top"></a>
+            <header class = "login_header">
+                <div class = "accessibility_menu_button_div">
+                    <!-- Add the function to the accesibility menu button when the page has been created -->
+                    <button type = "button" class = "accessibility_menu_button elements_overlay"></button>
+                </div>
+            </header>
+       </div>
+    </body>
 </html>
