--- a/Main Menu Page.html
+++ b/Main Menu Page.html
@@ -16,5 +16,9 @@
                 </div>
             </header>
        </div>
+       <script>
+            const username = localStorage.getItem("username");
+            console.log("Hello "+ username);
+       </script>
     </body>
 </html>
