--- a/Crossword Clue Solver.html
+++ b/Crossword Clue Solver.html
@@ -50,6 +50,34 @@
                 <div class = "submit_button_div">
                     <button type = "button" class = "submit_button text elements_overlay" onclick = "validClue()">SOLVE</button>
                 </div>
+                <div class = "answers_container">
+                    <div class = "answers_column">
+                        <h3 class = "text page_subtitle" style = "font-weight: bold;">Answers</h3>
+                        <p class = "text" id = "answer1"></p>
+                        <p class = "text" id = "answer2"></p>
+                        <p class = "text" id = "answer3"></p>
+                        <p class = "text" id = "answer4"></p>
+                        <p class = "text" id = "answer5"></p>
+                        <p class = "text" id = "answer6"></p>
+                        <p class = "text" id = "answer7"></p>
+                        <p class = "text" id = "answer8"></p>
+                        <p class = "text" id = "answer9"></p>
+                        <p class = "text" id = "answer10"></p>
+                    </div>
+                    <div class = "answers_column">
+                        <h3 class = "text page_subtitle" style = "font-weight: bold;">% Certainty</h3>
+                        <p class = "text" id = "perc1"></p>
+                        <p class = "text" id = "perc2"></p>
+                        <p class = "text" id = "perc3"></p>
+                        <p class = "text" id = "perc4"></p>
+                        <p class = "text" id = "perc5"></p>
+                        <p class = "text" id = "perc6"></p>
+                        <p class = "text" id = "perc7"></p>
+                        <p class = "text" id = "perc8"></p>
+                        <p class = "text" id = "perc9"></p>
+                        <p class = "text" id = "perc10"></p>
+                    </div>
+                </div>
             </main>
         </div>
         <script>
