Generating puzzles input page created and validated

--- a/Main Menu Page.html
+++ b/Main Menu Page.html
@@ -20,7 +20,7 @@
                     <h1 class = "text page_title">Main Menu</h1>
                 </div>
                 <a class = "text" href = "Crossword Clue Solver.html">Crossword Clue Solver</a>
-                <a class = "text" href = "">Crossword Puzzle Generator</a>
+                <a class = "text" href = "Crossword Puzzle Generator.html">Crossword Puzzle Generator</a>
                 <a class = "text" href = "">Your History</a>
             </main>
        </div>
