Added the clue solver history feature, and connected clue solver to the database. Added service key to .env

--- a/Main Menu Page.html
+++ b/Main Menu Page.html
@@ -21,7 +21,7 @@
                 </div>
                 <a class = "text" href = "Crossword Clue Solver.html">Crossword Clue Solver</a>
                 <a class = "text" href = "Crossword Puzzle Generator.html">Crossword Puzzle Generator</a>
-                <a class = "text" href = "">Your History</a>
+                <a class = "text" href = "Player History.html">Your History</a>
             </main>
        </div>
        <script>
