--- a/Crossword Clue Solver.html
+++ b/Crossword Clue Solver.html
@@ -102,7 +102,8 @@
                 const response = await fetch ("http://127.0.0.1:8000/solverAnswer",{
                     method: "POST",
                     headers: {"Content-Type": "application/json"},
-                    body: JSON.stringify({clue_valid, number_letters_valid, given_letters_valid})
+                    //Username added to this JSON so that username can be searched in the database
+                    body: JSON.stringify({clue_valid, number_letters_valid, given_letters_valid, username})
                 });
                 const clue_result = await response.json();
                 document.getElementById("answers_container").style.display = "flex";
